@@ -15,6 +15,8 @@ Version 5.2.8
   but we can't change it too much here in 5.2.8.  We'll look at a bigger change in 6.2. (bug #45978)
 - fixed bug that causes a 'connection not open' error when using a commandbuilder with
   a data adapter and inserts are used (bug #34657)
+- fixed problem with non-IS column parsing that caused data type and column type to be equal when
+  parsing set and enum columns
 
 Version 5.2.7 7/13/09
 - fixed procedure parameters collection so that an exception is thrown if we can't get the 
